change config file

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <i id="mobileMenu" class="fa-solid fa-bars text-sm cursor-pointer md:invisible"></i>
         <ul class="flex flex-col md:flex-row text-center justify-center gap-4 text-sm absolute top-10 py-10 md:py-0 left-0 w-full bg-black invisible md:visible md:static"
             id="mainMenu">
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">Store </a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">Mac</a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">iPad</a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">iPhone</a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">Watch</a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">AirPods</a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">TV & Home</a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">Entertainment</a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">Accessories</a></li>
-            <li class="hover:text-k-sky transition-all duration-200"><a href="#">Support</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">Store </a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">Mac</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">iPad</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">iPhone</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">Watch</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">AirPods</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">TV & Home</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">Entertainment</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">Accessories</a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">Support</a></li>
         </ul>
         <!-- header icon -->
         <div class="flex gap-4">
@@ -48,7 +48,7 @@
             <div class="flex flex-col justify-center items-center">
                 <img src="./assets/images/macbookair_light__f0o95rwae8ae_large 1.png" alt="logo">
                 <p class="text-sm">MacBook Air</p>
-                <p class="text-xs text-k-red">new</p>
+                <p class="text-xs text-secondary">new</p>
             </div>
             <div class="flex flex-col justify-center items-center">
                 <img src="./assets/images/Vector.png" alt="logo">
@@ -65,12 +65,12 @@
             <div class="flex flex-col justify-center items-center">
                 <img src="./assets/images/mac_studio_light__ea3pb1auizu6_large 1.png" alt="logo">
                 <p class="text-sm">Mac Studio</p>
-                <p class="text-xs text-k-red">new</p>
+                <p class="text-xs text-secondary">new</p>
             </div>
             <div class="flex flex-col justify-center items-center">
                 <img src="./assets/images/mac_pro_light__cj4dvg7thx5y_large 1.png" alt="logo">
                 <p class="text-sm">Mac Pro</p>
-                <p class="text-xs text-k-red">new</p>
+                <p class="text-xs text-secondary">new</p>
             </div>
             <div class="flex flex-col justify-center items-center">
                 <img src="./assets/images/displays_light__ewxqx5obdxci_large 1.png" alt="logo">
@@ -83,7 +83,7 @@
             <div class="flex flex-col justify-center items-center">
                 <img src="./assets/images/mac_os_light__d0zczt34scq6_large 1.png" alt="logo">
                 <p class="text-sm">Sonoma</p>
-                <p class="text-xs text-k-orange">Preview</p>
+                <p class="text-xs text-danger">Preview</p>
             </div>
         </section>
         <!-- features section end -->
@@ -109,22 +109,22 @@
         <section class="mx-auto flex flex-col md:flex-row justify-center items-center gap-5">
             <div class="w-full md:w-1/2 border flex flex-col justify-center items-center p-10 rounded-3xl text-center">
                 <img class="md:h-60" src="./assets/images/mac_studio__c2wojtx43pw2_large_2x 1.png" alt="mac">
-                <p class="text-xs text-k-red mt-10">New</p>
+                <p class="text-xs text-secondary mt-10">New</p>
                 <h2 class="text-5xl font-bold">Mac Studio</h2>
                 <h3 class="text-3xl mb-5">Supercharged by M2 Max and M2 Ultra.</h3>
                 <p class="text-xl">from ₹33650.00/mo.‡‡ or ₹209900.00*</p>
-                <div class="flex gap-5 text-base text-k-sky">
+                <div class="flex gap-5 text-base text-primary">
                     <a href="#">Learn more <i class="fa-solid fa-chevron-right"></i></a>
                     <a href="#">Buy <i class="fa-solid fa-chevron-right"></i></a>
                 </div>
             </div>
             <div class="w-full md:w-1/2 border flex flex-col justify-center items-center p-10 rounded-3xl text-center">
                 <img class="md:h-60" src="./assets/images/image16.png" alt="mac">
-                <p class="text-xs text-k-red mt-10">New</p>
+                <p class="text-xs text-secondary mt-10">New</p>
                 <h2 class="text-5xl font-bold">Mac Pro</h2>
                 <h3 class="text-3xl mb-5">Transformed by Apple silicon.</h3>
                 <p class="text-xl">From ₹729900.00*</p>
-                <div class="flex gap-5 text-base text-k-sky">
+                <div class="flex gap-5 text-base text-primary">
                     <a href="#">Learn more <i class="fa-solid fa-chevron-right"></i></a>
                     <a href="#">Buy <i class="fa-solid fa-chevron-right"></i></a>
                 </div>
@@ -207,7 +207,7 @@
         <!-- macBook section end -->
         <!-- save on mac section start -->
         <section class="text-center">
-            <a class="text-k-sky mb-10 text-xs" href="#">Compare all Mac models <i
+            <a class="text-primary mb-10 text-xs" href="#">Compare all Mac models <i
                     class="fa-solid fa-angle-right"></i></a>
             <div class="flex gap-10">
                 <div class="w-1/2 flex justify-end items-center">
@@ -216,8 +216,8 @@
                 <div class="w-1/2 text-left flex flex-col justify-center space-y-2">
                     <h2 class="text-4xl font-medium">Save on Mac or iPad for university</h2>
                     <p class="text-base">And last chance to get AirPods with Mac <br> and Apple Pencil with iPad</p>
-                    <p class="text-sm text-k-red">Offer ends 2nd October</p>
-                    <a class="text-xs text-k-sky" href="#">Shop Now <i class="fa-solid fa-angle-right"></i></a>
+                    <p class="text-sm text-secondary">Offer ends 2nd October</p>
+                    <a class="text-xs text-primary" href="#">Shop Now <i class="fa-solid fa-angle-right"></i></a>
                 </div>
             </div>
         </section>
@@ -235,7 +235,7 @@
                         <p class="mb-2">Learn how the pros at Skywalker <br> Sound push the limits of sonic
                             storytelling.
                         </p>
-                        <a class="text-k-sky" href="#">Watch the film</a>
+                        <a class="text-primary" href="#">Watch the film</a>
                     </div>
                 </div>
                 <div class="w-1/2 h-80 rounded-2xl py-10 flex flex-col justify-between text-lef border">
@@ -255,28 +255,28 @@
             <!-- card sgart -->
             <div class="grid grid-cols-3 gap-4">
                 <!-- card 1 start -->
-                <div class="text-center p-5 rounded-2xl border space-y-3 bg-k-bg">
+                <div class="text-center p-5 rounded-2xl border space-y-3 bg-light">
                     <i class="fa-solid fa-cube text-4xl font-normal mb-5"></i>
                     <h2 class="text-2xl font-medium">Free delivery and pickup</h2>
                     <p class="text-sm mb-3">Get free delivery or pickup at <br> your Apple Store.</p>
-                    <a class="text-k-sky text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+                    <a class="text-primary text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <!-- card 1 end -->
                 <!-- card 2 start -->
-                <div class="text-center p-5 rounded-2xl border space-y-3 bg-k-bg">
+                <div class="text-center p-5 rounded-2xl border space-y-3 bg-light">
                     <i
                         class="fa-solid fa-indian-rupee-sign w-9 h-9 font-normal mb-5 border-2 border-black p-2 rounded-full"></i>
                     <h2 class="text-2xl font-medium">Ways to buy</h2>
                     <p class="text-sm mb-3">Choose the way that’s right for you.</p>
-                    <a class="text-k-sky text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+                    <a class="text-primary text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <!-- card 2 end -->
                 <!-- card 3 start -->
-                <div class="text-center p-5 rounded-2xl border space-y-3 bg-k-bg">
+                <div class="text-center p-5 rounded-2xl border space-y-3 bg-light">
                     <i class="fa-regular fa-comments text-4xl font-normal mb-5"></i>
                     <h2 class="text-2xl font-medium mb-3">Get help buying</h2>
                     <p class="text-sm">Have a question? Call a Specialist or chat online. <br> Call 008000401966.</p>
-                    <a class="text-k-sky text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+                    <a class="text-primary text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <!-- card 3 end -->
             </div>
@@ -289,29 +289,29 @@
             <div class="grid grid-cols-3 gap-4">
                 <!-- card 1 start -->
                 <div
-                    class="text-center p-5 rounded-2xl border space-y-3 flex flex-col justify-center items-center bg-k-bg">
+                    class="text-center p-5 rounded-2xl border space-y-3 flex flex-col justify-center items-center bg-light">
                     <img src="./assets/images/image23.png" alt="mac">
                     <h2 class="text-2xl font-medium">Mac does that.</h2>
                     <p class="text-sm mb-3">Discover what Mac can do for you.</p>
-                    <a class="text-k-sky text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+                    <a class="text-primary text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <!-- card 1 end -->
                 <!-- card 2 start -->
                 <div
-                    class="text-center p-5 rounded-2xl border space-y-3 flex flex-col justify-center items-center bg-k-bg">
+                    class="text-center p-5 rounded-2xl border space-y-3 flex flex-col justify-center items-center bg-light">
                     <img src="./assets/images/image24.png" alt="mac">
                     <h2 class="text-2xl font-medium">Continuity</h2>
                     <p class="text-sm mb-3">All your devices.One seamless experience.</p>
-                    <a class="text-k-sky text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+                    <a class="text-primary text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <!-- card 2 end -->
                 <!-- card 3 start -->
                 <div
-                    class="bg-k-bg text-center p-5 rounded-2xl border space-y-3 flex flex-col justify-center items-center">
+                    class="bg-light text-center p-5 rounded-2xl border space-y-3 flex flex-col justify-center items-center">
                     <img src="./assets/images/image25.png" alt="mac">
                     <h2 class="text-2xl font-medium mb-3">macOS Sonoma</h2>
                     <p class="text-sm">Come for the power.Stay for the fun.</p>
-                    <a class="text-k-sky text-base" href="#">Explore the preview <i
+                    <a class="text-primary text-base" href="#">Explore the preview <i
                             class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <!-- card 3 end -->
@@ -326,7 +326,7 @@
                 <button
                     class="px-5 py-2 text-xs hover:bg-white rounded-full hover:text-black transition-all duration-300">Desktop</button>
             </div>
-            <div class="bg-k-bg flex flex-col justify-center items-center gap-5 p-10 border rounded-3xl">
+            <div class="bg-light flex flex-col justify-center items-center gap-5 p-10 border rounded-3xl">
                 <p class="text-sm">Powerful creativity and productivity tools live inside every Mac — apps that help you
                     explore, <br> connect and work more efficiently.</p>
                 <div class="w-1/2 mx-auto flex justify-between gap-5 border-b-2">
@@ -350,13 +350,13 @@
                             start page helps you easily and quickly save, find and share your favourite sites. And Siri
                             suggestions surface bookmarks, links from your reading list, iCloud Tabs,
                             links you receive in Messages and more.</p>
-                        <a class="text-k-sky text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+                        <a class="text-primary text-base" href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                         <div class="flex gap-5 items-center">
                             <img src="./assets/images/image 35.png" alt="mac">
                             <div>
                                 <p class="text-sm">The Mac App Store features rich editorial content and great apps for
                                     Mac.</p>
-                                <a class="text-xs text-k-sky" href="#">Explore the Mac App Store <i
+                                <a class="text-xs text-primary" href="#">Explore the Mac App Store <i
                                         class="fa-solid fa-arrow-trend-up"></i></a>
                             </div>
                         </div>
@@ -371,12 +371,12 @@
             <div class="grid grid-cols-3 gap-3">
                 <!-- card 1 start -->
                 <div
-                    class="border rounded-2xl bg-k-bg p-10 flex flex-col justify-center items-center space-y-2 hover:bg-black hover:text-white transition-all duration-300">
+                    class="border rounded-2xl bg-light p-10 flex flex-col justify-center items-center space-y-2 hover:bg-black hover:text-white transition-all duration-300">
                     <img src="./assets/images/image 39.png" alt="mac">
                     <h3 class="text-3xl font-medium"><i class="fa-brands fa-apple"></i> One</h3>
                     <p class="text-sm">Bundle four Apple services.
                         And enjoy more for less.</p>
-                    <div class="flex gap-5 text-k-sky">
+                    <div class="flex gap-5 text-primary">
                         <a href="#">Try it free <i class="fa-solid fa-arrow-trend-up"></i></a>
                         <a href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                     </div>
@@ -389,7 +389,7 @@
                     <h3 class="text-3xl font-medium"><i class="fa-brands fa-apple"></i> TV+</h3>
                     <p class="text-sm">Get 3 months of Apple TV+
                         free when you buy a Mac.</p>
-                    <div class="flex gap-5 text-k-sky">
+                    <div class="flex gap-5 text-primary">
                         <a href="#">Try it free <i class="fa-solid fa-arrow-trend-up"></i></a>
                         <a href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                     </div>
@@ -397,12 +397,12 @@
                 <!-- card 2 end -->
                 <!-- card 3 start -->
                 <div
-                    class="border rounded-2xl bg-k-bg p-10 flex flex-col justify-center items-center space-y-2 hover:bg-black hover:text-white transition-all duration-300">
+                    class="border rounded-2xl bg-light p-10 flex flex-col justify-center items-center space-y-2 hover:bg-black hover:text-white transition-all duration-300">
                     <img src="./assets/images/Group 27.png" alt="mac">
                     <h3 class="text-3xl font-medium"><i class="fa-brands fa-apple"></i> Arcade</h3>
                     <p class="text-sm text-center">Get 3 months of Apple Arcade free
                         when you buy a Mac.</p>
-                    <div class="flex gap-5 text-k-sky">
+                    <div class="flex gap-5 text-primary">
                         <a href="#">Try it free <i class="fa-solid fa-arrow-trend-up"></i></a>
                         <a href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                     </div>
@@ -519,7 +519,7 @@
             </div>
         </div>
         <div class="text-xs flex justify-between pb-3 mb-3 border-b">
-            <p>More ways to shop: <a class="underline text-k-sky" href="#">Find an Apple Store</a> or other retailer
+            <p>More ways to shop: <a class="underline text-primary" href="#">Find an Apple Store</a> or other retailer
                 near you. Or call 000800 040 1966.</p>
             <p>Copyright &copy; 2023 Apple Inc. All rights reserved.</p>
         </div>
