change config file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="ASSDI">
     <!--  title -->
-    <title>Apple Website</title>
+    <title>Mac Store</title>
     <!-- css link -->
     <link rel="stylesheet" href="./style.css">
     <!-- favicon link -->
