--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <body class="font-SFpro font-normal">
     <!-------------------------------------------------- header start -------------------------------------------------->
-    <header class="px-2 bg-black text-white py-2 flex justify-between items-center relative">
-        <a class="w-6 h-6" href="#">
+    <header class="px-2 md:px-8 bg-black text-white py-2 md:py-8 flex justify-between items-center relative">
+        <a href="#">
             <img src="./assets/images/logo.png" alt="logo">
         </a>
-        <i id="mobileMenu" class="fa-solid fa-bars text-sm cursor-pointer md:invisible"></i>
-        <ul class="flex flex-col md:flex-row text-center justify-center gap-4 text-sm absolute top-10 py-10 md:py-0 left-0 w-full bg-black invisible md:visible md:static"
+        <i id="mobileMenu" class="fa-solid fa-bars cursor-pointer md:invisible"></i>
+        <ul class="flex flex-col md:flex-row text-center justify-center gap-4 absolute top-10 py-10 md:py-0 left-0 w-full bg-black invisible md:visible md:static"
             id="mainMenu">
             <li class="hover:text-primary transition-all duration-200"><a href="#">Store </a></li>
             <li class="hover:text-primary transition-all duration-200"><a href="#">Mac</a></li>
