--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body class="font-SFpro font-normal">
-    <!-------------------------------------------------- header start -------------------------------------------------->
+    <!-------------------------------------------------- 
+    header start 
+    -------------------------------------------------->
     <header class="px-2 md:px-8 bg-black text-white py-2 md:py-8 flex justify-between items-center relative">
         <a href="#">
             <img src="./assets/images/logo.png" alt="logo">
@@ -22,7 +24,7 @@
         <i id="mobileMenu" class="fa-solid fa-bars cursor-pointer md:invisible"></i>
         <ul class="flex flex-col md:flex-row text-center justify-center gap-4 absolute top-10 py-10 md:py-0 left-0 w-full bg-black invisible md:visible md:static"
             id="mainMenu">
-            <li class="hover:text-primary transition-all duration-200"><a href="#">Store </a></li>
+            <li class="hover:text-primary transition-all duration-200"><a href="#">Store</a></li>
             <li class="hover:text-primary transition-all duration-200"><a href="#">Mac</a></li>
             <li class="hover:text-primary transition-all duration-200"><a href="#">iPad</a></li>
             <li class="hover:text-primary transition-all duration-200"><a href="#">iPhone</a></li>
@@ -40,7 +42,9 @@
             <i class="fa-regular fa-circle-user cursor-pointer"></i>
         </div>
     </header>
-    <!--------------------------------------------------- header end --------------------------------------------------->
+    <!--------------------------------------------------- 
+    header end 
+    --------------------------------------------------->
     <!---------------------------------------------- main section start ------------------------------------------------>
     <main class="space-y-10 px-2 md:px-5">
         <!-- features section start -->
@@ -438,7 +442,7 @@
     <!-- footer start -->
     <footer class="p-5 bg-black text-white mt-10">
         <p class="text-xs border-b pb-3">*Listed pricing is Maximum Retail Price (inclusive of all taxes).</p>
-        <div class="flex justify-between pt-5">
+        <div class="md:flex md:justify-between text-center md:text-justify pt-5">
             <div>
                 <h4 class="mb-2 text-sm">Shop and Learn</h4>
                 <ul class="text-xs">
