Updated html file

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     header end 
     --------------------------------------------------->
     <!---------------------------------------------- main section start ------------------------------------------------>
-    <main class="space-y-10 px-2 md:px-5">
+    <main class="space-y-10 px-2 md:px-8 py-2 md:py-8">
         <!-- features section start -->
-        <section class="flex justify-between items-end flex-wrap gap-10">
-            <div class="flex flex-col justify-center items-center">
+        <section class="md:flex justify-between items-center gap-10 hidden">
+            <div class="flex flex-col justify-center items-center cursor-pointer">
                 <img src="./assets/images/macbookair_light__f0o95rwae8ae_large 1.png" alt="logo">
                 <p class="text-sm">MacBook Air</p>
                 <p class="text-xs text-secondary">new</p>
@@ -109,7 +109,7 @@
             </div>
         </section>
         <!-- hero section end -->
-        <!-- product sectjion start -->
+        <!-- product section start -->
         <section class="mx-auto flex flex-col md:flex-row justify-center items-center gap-5">
             <div class="w-full md:w-1/2 border flex flex-col justify-center items-center p-10 rounded-3xl text-center">
                 <img class="md:h-60" src="./assets/images/mac_studio__c2wojtx43pw2_large_2x 1.png" alt="mac">
@@ -134,7 +134,7 @@
                 </div>
             </div>
         </section>
-        <!-- product sectjion end -->
+        <!-- product section end -->
         <!-- macBook section start -->
         <section class="space-y-5">
             <div class="text-center space-y-5 opacity-80">
@@ -146,9 +146,9 @@
                         class="px-5 py-2 text-xs hover:bg-white rounded-full hover:text-black transition-all duration-300">Desktop</button>
                 </div>
             </div>
-            <div class="flex gap-2">
+            <div class="md:flex md:gap-3 px-6 md:px-0 space-y-4 md:space-y-0">
                 <!-- cart 1 start -->
-                <div class="border rounded-3xl flex flex-col gap-5 p-5 justify-center items-center text-center text-sm">
+                <div class="border rounded-3xl flex flex-col gap-5 p-5 justify-center items-center text-center text-sm hover:shadow-lg">
                     <img src="./assets/images/image17.png" alt="mac">
                     <div>
                         <h3 class="text-2xl font-medium">MacBook Air 13”</h3>
@@ -213,11 +213,11 @@
         <section class="text-center">
             <a class="text-primary mb-10 text-xs" href="#">Compare all Mac models <i
                     class="fa-solid fa-angle-right"></i></a>
-            <div class="flex gap-10">
-                <div class="w-1/2 flex justify-end items-center">
+            <div class="md:flex md:gap-10">
+                <div class="md:w-1/2 w-full md:flex justify-end items-center">
                     <img src="./assets/images/image 10.png" alt="mac">
                 </div>
-                <div class="w-1/2 text-left flex flex-col justify-center space-y-2">
+                <div class="md:w-1/2 w-full text-left flex flex-col justify-center space-y-2">
                     <h2 class="text-4xl font-medium">Save on Mac or iPad for university</h2>
                     <p class="text-base">And last chance to get AirPods with Mac <br> and Apple Pencil with iPad</p>
                     <p class="text-sm text-secondary">Offer ends 2nd October</p>
