html file updated

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/bc02ba23a8.js" crossorigin="anonymous"></script>
     <!-- javaScript added -->
-    <script src="./script.js"></script>
+    <script src="./script.js" type="module"></script>
 </body>
 
 </html>
